# guillotina_graphql

./: .gitignore  .isort.cfg  README.md  config.yaml  pyproject.toml  setup.cfg  setup.py
guillotina_graphql/: __init__.py  mappings.py  resolvers.py  schema.py  services.py
guillotina_graphql/tests/: conftest.py  fixtures.py  test_services.py
